--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
   },
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
+    "electron-squirrel-startup": "^1.0.0",
+    "express": "^4.18.2",
+    "hbs": "^4.2.0",
+    "jsdom": "^20.0.2",
+    "mysql": "^2.18.1",
+    "query-selector": "^2.0.0",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0",
