--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "jsdom": "^20.0.2",
     "mysql": "^2.18.1",
