--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "dotenv": "^16.0.3",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "jsdom": "^20.0.2",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.20",
     "query-selector": "^2.0.0",
     "xmlhttprequest": "^1.8.0"
   },
