--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "jsdom": "^20.0.2",
+    "jsonfile": "^6.1.0",
     "nodemon": "^2.0.20",
     "query-selector": "^2.0.0",
     "requirejs": "^2.3.6",
