--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
+    "jquery": "^3.6.1",
     "jsdom": "^20.0.2",
     "jsonfile": "^6.1.0",
     "nodemon": "^2.0.20",
