--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@electron-forge/maker-squirrel": "^6.0.1",
     "@electron-forge/maker-zip": "^6.0.1",
     "@electron-forge/plugin-webpack": "^6.0.1",
+    "@electron-forge/publisher-github": "^6.0.3",
     "electron": "21.2.2"
   }
 }
